unpackaged/main/default/objects/n2de__Team_member__c/n2de__Team_member__c.object-meta.xml
<CustomObject>
    <description>Team members</description>
    <label>Distribution team member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution team members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>