unpackaged/main/default/objects/n2de__Team_member__c/fields/n2de__Distribution_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution hours</label>
    <referenceTo>n2de__Distribution_hours__c</referenceTo>
    <relationshipLabel>Distribution team members</relationshipLabel>
    <relationshipName>Distribution_team_members</relationshipName>
    <type>Lookup</type>
</CustomField>