unpackaged/main/default/objects/n2de__Team_member__c/fields/n2de__Is_member_distribution_hours__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_member_distribution_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable member distribution hours</label>
    <type>Checkbox</type>
</CustomField>