unpackaged/main/default/objects/n2de__Team_member__c/fields/n2de__Queue_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Queue_id__c</fullName>
    <label>Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>