unpackaged/main/default/objects/n2de__Team_member__c/fields/n2de__Team__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team__c</fullName>
    <label>Distribution team</label>
    <referenceTo>n2de__Team__c</referenceTo>
    <relationshipLabel>Distribution team members</relationshipLabel>
    <relationshipName>Team_members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>