unpackaged/main/default/objects/n2de__Team_member__c/fields/n2de__Team_member_runtime__c.field-meta.xml
<CustomField>
    <fullName>n2de__Team_member_runtime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team member runtime</label>
    <referenceTo>n2de__Team_member_runtime__c</referenceTo>
    <relationshipLabel>Distribution team members</relationshipLabel>
    <relationshipName>Team_member_runtime</relationshipName>
    <type>Lookup</type>
</CustomField>