unpackaged/main/default/objects/n2de__Team_member__c/fields/n2de__User__c.field-meta.xml
<CustomField>
    <fullName>n2de__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distributor_group_members</relationshipName>
    <type>Lookup</type>
</CustomField>