unpackaged/main/default/objects/n2de__Team_member__c/fields/n2de__Weighting__c.field-meta.xml
<CustomField>
    <fullName>n2de__Weighting__c</fullName>
    <label>Weighting</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>